--- a/css/style.scss
+++ b/css/style.scss
@@ -11,6 +11,7 @@
 @import "select";
 @import "table";
 @import "pagination";
+@import "under_construction";
 
 @font-face {
   font-family: 'KOTRA_BOLD-Bold';
