--- a/css/pagination.scss
+++ b/css/pagination.scss
@@ -16,7 +16,7 @@
     margin-right: 20px;
     font-size: 1.5rem;
     box-shadow: 0px 0px 3px rgba(177, 177, 177, 0.3);
-    transition: all 0.4s;
+    transition: color 0.4s;
     cursor: pointer;
     }
     button {
