--- a/css/style.css
+++ b/css/style.css
@@ -616,7 +616,7 @@
   display: flex;
   align-items: center;
 }
-.pagination button, .pagination div {
+.pagination button, .pagination ul > li {
   display: block;
   align-items: center;
   justify-content: center;
@@ -640,6 +640,18 @@
 }
 .pagination button:last-child {
   margin-right: 0;
+}
+.pagination .pagination_pages {
+  display: flex;
+}
+.pagination .pagination_pages .page {
+  text-align: center;
+  line-height: 36px;
+  font-weight: bold;
+}
+.pagination .pagination_pages .page.on {
+  background-color: #58CE8F;
+  color: #fff;
 }
 
 @font-face {
