--- a/css/landing_page.css
+++ b/css/landing_page.css
@@ -1,39 +1,51 @@
 @-webkit-keyframes text {
   0% {
     opacity: 0;
-    transform: translate(-75%, -45%);
+    -webkit-transform: translate(-75%, -45%);
+            transform: translate(-75%, -45%);
   }
   100% {
     opacity: 1;
-    transform: translate(-55%, -45%);
+    -webkit-transform: translate(-55%, -45%);
+            transform: translate(-55%, -45%);
   }
 }
+
 @keyframes text {
   0% {
     opacity: 0;
-    transform: translate(-75%, -45%);
+    -webkit-transform: translate(-75%, -45%);
+            transform: translate(-75%, -45%);
   }
   100% {
     opacity: 1;
-    transform: translate(-55%, -45%);
+    -webkit-transform: translate(-55%, -45%);
+            transform: translate(-55%, -45%);
   }
 }
+
 @-webkit-keyframes ball {
   0% {
-    transform: translateX(600px);
+    -webkit-transform: translateX(600px);
+            transform: translateX(600px);
   }
   100% {
-    transform: translateX(0);
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
   }
 }
+
 @keyframes ball {
   0% {
-    transform: translateX(600px);
+    -webkit-transform: translateX(600px);
+            transform: translateX(600px);
   }
   100% {
-    transform: translateX(0);
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
   }
 }
+
 .landing_wrap {
   position: relative;
   height: 90vh;
@@ -42,39 +54,47 @@
   margin: 5vh;
   overflow-x: hidden;
 }
+
 .landing_wrap .bg_color {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 100%;
   height: 100%;
 }
+
 .landing_wrap .bg_color .left {
   width: 50%;
   height: 100%;
   background-color: #58CE8F;
 }
+
 .landing_wrap .bg_color .right {
   width: 50%;
   height: 100%;
   background-color: #FBFBFB;
 }
+
 .landing_wrap h1 {
-  font-family: "KOTRA_BOLD-Bold";
+  font-family: 'KOTRA_BOLD-Bold';
   font-size: 12rem;
   font-weight: bold;
   position: absolute;
   top: 45%;
   left: 50%;
-  transform: translate(-55%, -45%);
+  -webkit-transform: translate(-55%, -45%);
+          transform: translate(-55%, -45%);
   line-height: 1;
-  -webkit-animation: text 0.8s ease-in-out;
-          animation: text 0.8s ease-in-out;
+  -webkit-animation: text .8s ease-in-out;
+          animation: text .8s ease-in-out;
   -ms-user-select: none;
   -moz-user-select: -moz-none;
   -webkit-user-select: none;
   user-select: none;
 }
+
 .landing_wrap h1::before {
-  content: "";
+  content: '';
   width: 50px;
   height: 50px;
   border-radius: 50%;
@@ -84,4 +104,5 @@
   right: -60px;
   -webkit-animation: ball 1.2s ease-in-out;
           animation: ball 1.2s ease-in-out;
-}/*# sourceMappingURL=landing_page.css.map */
+}
+/*# sourceMappingURL=landing_page.css.map */
