--- a/css/progress.css
+++ b/css/progress.css
@@ -1,32 +1,46 @@
 @-webkit-keyframes rotate {
   0% {
-    transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
   }
   100% {
-    transform: rotate(359deg);
+    -webkit-transform: rotate(359deg);
+            transform: rotate(359deg);
   }
 }
+
 @keyframes rotate {
   0% {
-    transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
   }
   100% {
-    transform: rotate(359deg);
+    -webkit-transform: rotate(359deg);
+            transform: rotate(359deg);
   }
 }
+
 .progress_wrap {
   width: 100px;
   height: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
+
 .progress_wrap .progressbar {
   border: 8px solid #58CE8F;
   border-top-color: #A6F0C9;
   border-radius: 100%;
   height: 50px;
   width: 50px;
-  -webkit-animation: rotate 1s linear infinite;
-          animation: rotate 1s linear infinite;
-}/*# sourceMappingURL=progress.css.map */
+  -webkit-animation: rotate 1s  linear infinite;
+          animation: rotate 1s  linear infinite;
+}
+/*# sourceMappingURL=progress.css.map */
