--- a/과제/css/style.css
+++ b/과제/css/style.css
@@ -39,10 +39,17 @@ a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 5200px;
+  width: 5720px;
   position: absolute;
   top: 0;
   left: 0;
+}
+
+.wrap .slide_wrap:first-child::before {
+  content: '';
+  width: 500px;
+  height: 350px;
+  margin: 20px 10px;
 }
 
 .wrap .slide_wrap .slide {
