--- a/과제/css/style.scss
+++ b/과제/css/style.scss
@@ -34,10 +34,17 @@ a {
   position: relative;
   .slide_wrap {
     display: flex;
-    width: 5200px;
+    width: 5720px;
     position: absolute;
     top: 0;
     left: 0;
+    &:first-child::before {
+      content: '';
+      width: 500px;
+      height: 350px;
+      margin: 20px 10px;
+      // background-color: tomato;
+    }
     .slide {
       width: 500px;
       height: 350px;
