--- a/과제/css/style.css
+++ b/과제/css/style.css
@@ -91,4 +91,8 @@ a {
   margin: 20px 10px;
   cursor: pointer;
 }
+
+.wrap .button_wrap button.disabled {
+  background-color: #999;
+}
 /*# sourceMappingURL=style.css.map */
