--- a/과제/css/style.scss
+++ b/과제/css/style.scss
@@ -72,6 +72,9 @@ a {
       color: #fff;
       margin: 20px 10px;
       cursor: pointer;
+      &.disabled {
+        background-color: #999;
+      }
     }
   }
 }
