--- a/css/alert.css
+++ b/css/alert.css
@@ -1,87 +1,66 @@
 @-webkit-keyframes fade {
   0% {
     opacity: 0;
-    -webkit-transform: translateY(-20px);
-            transform: translateY(-20px);
+    transform: translateY(-20px);
   }
   10% {
     opacity: 1;
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
+    transform: translateY(0);
   }
   80% {
     opacity: 1;
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
+    transform: translateY(0);
   }
   100% {
     opacity: 0;
-    -webkit-transform: translateY(20px);
-            transform: translateY(20px);
+    transform: translateY(20px);
   }
 }
-
 @keyframes fade {
   0% {
     opacity: 0;
-    -webkit-transform: translateY(-20px);
-            transform: translateY(-20px);
+    transform: translateY(-20px);
   }
   10% {
     opacity: 1;
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
+    transform: translateY(0);
   }
   80% {
     opacity: 1;
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
+    transform: translateY(0);
   }
   100% {
     opacity: 0;
-    -webkit-transform: translateY(20px);
-            transform: translateY(20px);
+    transform: translateY(20px);
   }
 }
-
 .alert_wrap {
   position: fixed;
   top: 0;
   left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+  transform: translateX(-50%);
   width: 350px;
   padding: 10px 20px;
 }
 
 .alert_box {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-between;
+  align-items: center;
   padding: 12px 20px;
   border-radius: 5px;
   color: #fff;
   font-size: 1.1rem;
   margin-bottom: 10px;
   opacity: 0;
-  -webkit-transform: translateY(-20px);
-          transform: translateY(-20px);
+  transform: translateY(-20px);
 }
-
 .alert_box.success {
   background-color: #01B96B;
 }
-
 .alert_box.error {
   background-color: #FF5E5E;
 }
-
 .alert_box span {
   font-weight: bold;
   font-size: 1.5rem;
@@ -89,9 +68,7 @@
   cursor: pointer;
   padding: 5px;
 }
-
 .alert_box.on {
   -webkit-animation: fade 2.5s linear;
           animation: fade 2.5s linear;
-}
-/*# sourceMappingURL=alert.css.map */
+}/*# sourceMappingURL=alert.css.map */
