--- a/css/card.css
+++ b/css/card.css
@@ -1,10 +1,7 @@
 .tab_menu {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   padding-bottom: 20px;
 }
-
 .tab_menu div {
   margin-right: 15px;
   font-size: 1.3rem;
@@ -12,7 +9,6 @@
   color: #969696;
   cursor: pointer;
 }
-
 .tab_menu div.active {
   color: #01B96B;
   font-weight: bold;
@@ -25,42 +21,31 @@
   border-radius: 10px;
   overflow: hidden;
 }
-
 .content_box .card .card_img {
   width: 100%;
   overflow: hidden;
 }
-
 .content_box .card .card_img img {
   width: 100%;
-  -webkit-transition: -webkit-transform 0.6s;
-  transition: -webkit-transform 0.6s;
   transition: transform 0.6s;
-  transition: transform 0.6s, -webkit-transform 0.6s;
   vertical-align: middle;
 }
-
 .content_box .card .card_img img:hover {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+  transform: scale(1.1);
 }
-
 .content_box .card .card_text {
   padding: 20px 20px 30px 20px;
 }
-
 .content_box .card .card_text .card_text_title {
   font-size: 1.2rem;
   font-weight: bold;
   padding-bottom: 10px;
   color: #242424;
 }
-
 .content_box .card .card_text .card_text_content {
   font-weight: 400;
 }
 
 .content_box.cont2 {
   display: none;
-}
-/*# sourceMappingURL=card.css.map */
+}/*# sourceMappingURL=card.css.map */
