--- a/css/landing_page.scss
+++ b/css/landing_page.scss
@@ -42,10 +42,11 @@
   }
   h1 {
     font-family: 'KOTRA_BOLD-Bold';
-    font-size: 12rem;
+    font-size: 15rem;
     font-weight: bold;
+    color: #111;
     position: absolute;
-    top: 45%;
+    top: 50%;
     left: 50%;
     transform: translate(-55%,-45%);
     line-height: 1;
