--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @-webkit-keyframes text {
   0% {
     opacity: 0;
@@ -60,10 +59,11 @@
 }
 .landing_wrap h1 {
   font-family: "KOTRA_BOLD-Bold";
-  font-size: 12rem;
+  font-size: 15rem;
   font-weight: bold;
+  color: #111;
   position: absolute;
-  top: 45%;
+  top: 50%;
   left: 50%;
   transform: translate(-55%, -45%);
   line-height: 1;
@@ -573,7 +573,7 @@
   position: relative;
 }
 .content_box.table_wrap table.table_wrap th::after {
-  content: "";
+  content: "\f078";
   font-family: "Font Awesome 5 Free";
   font-weight: 600;
   position: absolute;
@@ -627,7 +627,7 @@
   margin-right: 20px;
   font-size: 1.5rem;
   box-shadow: 0px 0px 3px rgba(177, 177, 177, 0.3);
-  transition: color, background-color 0.4s;
+  transition: color, background-color 0.3s;
   cursor: pointer;
 }
 .pagination button {
@@ -764,6 +764,9 @@ a {
 .left_box .inner li {
   transition: all 0.4s;
   cursor: pointer;
+}
+.left_box .inner li a {
+  color: #000;
 }
 .left_box .inner li span {
   font-size: 1.2rem;
