--- a/css/style.scss
+++ b/css/style.scss
@@ -81,6 +81,9 @@ a{
     li {
     transition: all 0.4s;
     cursor: pointer;
+    a {
+      color: #000;
+    }
     span {
       font-size: 1.2rem;
       font-weight: 400;
