--- a/과제/css/style.css
+++ b/과제/css/style.css
@@ -1,21 +1,19 @@
 @font-face {
-  font-family: 'GmarketSansLight';
+  font-family: "GmarketSansLight";
   src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansLight.woff") format("woff");
   font-weight: normal;
   font-style: normal;
 }
-
 * {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html,
 body {
   font-size: 14px;
-  font-family: 'GmarketSansLight';
+  font-family: "GmarketSansLight";
   background-color: #fff;
 }
 
@@ -34,53 +32,38 @@ a {
   margin: 0 auto;
   position: relative;
 }
-
 .wrap .slide_wrap {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   width: 5720px;
   position: absolute;
   top: 0;
   left: 0;
 }
-
 .wrap .slide_wrap:first-child::before {
-  content: '';
+  content: "";
   width: 500px;
   height: 350px;
   margin: 20px 10px;
 }
-
 .wrap .slide_wrap .slide {
   width: 500px;
   height: 350px;
   margin: 20px 10px;
 }
-
 .wrap .slide_wrap .slide img {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
-
 .wrap .button_wrap {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   width: 300px;
   margin: 0 auto;
-  -webkit-transform: translateY(390px);
-          transform: translateY(390px);
+  transform: translateY(390px);
 }
-
 .wrap .button_wrap button {
   width: 120px;
   height: 40px;
@@ -91,8 +74,6 @@ a {
   margin: 20px 10px;
   cursor: pointer;
 }
-
 .wrap .button_wrap button.disabled {
   background-color: #999;
-}
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
