--- a/css/style.scss
+++ b/css/style.scss
@@ -116,23 +116,25 @@ a{
         }
       }
     }
-    &.on {
-      transform: translateX(5px);
-        span {
-          font-weight: bold;
-          &::before {
-            content: '';
-            width: 100%;
-            height: 10px;
-            background-color: $green03;
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            z-index: -1;
-            transition: width 0.4s;
+    }
+    li.click {
+      &.on {
+        transform: translateX(5px);
+          span {
+            font-weight: bold;
+            &::before {
+              content: '';
+              width: 100%;
+              height: 10px;
+              background-color: $green03;
+              position: absolute;
+              bottom: 0;
+              left: 0;
+              z-index: -1;
+              transition: width 0.4s;
+            }
           }
         }
-      }
     }
   }
   }
