--- a/css/landing_page.css
+++ b/css/landing_page.css
@@ -57,10 +57,10 @@
   height: 100%;
   background-color: #FBFBFB;
 }
-.landing_wrap h1 {
+.landing_wrap h1.hello {
   font-family: "KOTRA_BOLD-Bold";
-  font-size: 15rem;
-  font-weight: bold;
+  font-size: 12rem;
+  font-weight: 500;
   color: #111;
   position: absolute;
   top: 50%;
@@ -74,7 +74,10 @@
   -webkit-user-select: none;
   user-select: none;
 }
-.landing_wrap h1::before {
+.landing_wrap h1.hello span.bold {
+  font-weight: bold;
+}
+.landing_wrap h1.hello::before {
   content: "";
   width: 50px;
   height: 50px;
