--- a/css/style.css
+++ b/css/style.css
@@ -57,10 +57,10 @@
   height: 100%;
   background-color: #FBFBFB;
 }
-.landing_wrap h1 {
-  font-family: "KOTRA_BOLD-Bold";
-  font-size: 15rem;
-  font-weight: bold;
+.landing_wrap h1.hello {
+  font-family: "LINESeedKR-Bd";
+  font-size: 12rem;
+  font-weight: 500;
   color: #111;
   position: absolute;
   top: 50%;
@@ -74,7 +74,11 @@
   -webkit-user-select: none;
   user-select: none;
 }
-.landing_wrap h1::before {
+.landing_wrap h1.hello span.bold {
+  font-family: "KOTRA_BOLD-Bold";
+  font-weight: bold;
+}
+.landing_wrap h1.hello::before {
   content: "";
   width: 50px;
   height: 50px;
@@ -697,6 +701,12 @@
   font-family: "KOTRA_BOLD-Bold";
   src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-10-21@1.1/KOTRA_BOLD-Bold.woff") format("woff");
   font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "LINESeedKR-Bd";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/LINESeedKR-Bd.woff2") format("woff2");
+  font-weight: 700;
   font-style: normal;
 }
 @font-face {
