--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
 @-webkit-keyframes text {
   0% {
     opacity: 0;
@@ -727,6 +728,12 @@
   font-weight: 700;
   font-style: normal;
 }
+@font-face {
+  font-family: "Pretendard-Regular";
+  src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+}
 * {
   margin: 0;
   padding: 0;
@@ -734,8 +741,8 @@
 }
 
 html, body {
+  font-family: "Noto Sans KR", sans-serif;
   font-size: 14px;
-  font-family: "GmarketSan";
   background-color: #fff;
 }
 
@@ -757,7 +764,9 @@ a {
   padding: 20px 0;
 }
 .wrap .nav_wrap .inner {
+  font-family: "GmarketSan", "Pretendard-Regular";
   padding: 0 20px;
+  line-height: 20px;
 }
 
 .left_box {
